# CHIP-8

./: CMakeLists.txt  main.c  main.h
